# sdk_deploy

./: Contributors.md  README.md  README_EN.md  README_lite3_sdk_service.md  fix_cmake.py  generate_msg_pkg.sh
src/Lite3_sdk_deploy/: .gitignore  CMakeLists.txt  README.md  main.cpp  package.xml
src/Lite3_sdk_deploy/include/types/: common_types.h  custom_types.h
src/Lite3_sdk_deploy/include/utils/: safe_controller.hpp
src/Lite3_sdk_deploy/interface/: CMakeLists.txt
src/Lite3_sdk_deploy/interface/robot/: robot_interface.h
src/Lite3_sdk_deploy/interface/user_command/: keyboard_interface.hpp  keyboard_interface_sim.hpp  retroid_gamepad_interface.hpp  user_command_interface.h
src/Lite3_sdk_deploy/policy/: policy.onnx
src/Lite3_sdk_deploy/run_policy/: lite3_policy_runner.hpp  policy_runner_base.hpp
src/Lite3_sdk_deploy/state_machine/: state_base.h  state_machine_base.h
src/Lite3_sdk_deploy/state_machine/parameters/: control_parameters.h  lite3_control_parameters.cpp
src/Lite3_sdk_deploy/state_machine/quadruped/: idle_state.hpp  joint_damping_state.hpp  q_state_machine.hpp  rl_control_state.hpp  standup_state.hpp
src/M20_sdk_deploy/: CMakeLists.txt  README.md  main.cpp  package.xml
src/M20_sdk_deploy/config/: elevation_mapping.yaml
src/M20_sdk_deploy/include/types/: common_types.h  custom_types.h  dds_types.h
src/M20_sdk_deploy/include/utils/: basic_function.hpp  motion_state_feedback.hpp  safe_controller.hpp
src/M20_sdk_deploy/interface/user_command/: joy_interface.h  keyboard_interface.hpp
src/M20_sdk_deploy/policy/: policy.onnx
src/M20_sdk_deploy/run_policy/: m20_policy_runner.hpp  m20_sensor_policy_runner.hpp  policy_runner_base.hpp
src/M20_sdk_deploy/scripts/: generate_mujoco_terrain.py  joy_udp_sender.py  lidar_to_scan.py  pt_to_onnx.py
src/M20_sdk_deploy/state_machine/: state_machine_base.h
src/M20_sdk_deploy/state_machine/parameters/: control_parameters.h  safety_params.json
src/M20_sdk_deploy/state_machine/quadruped_wheel/: idle_state.hpp  standup_state.hpp  (+4 more)
src/drdds/: CMakeLists.txt  package.xml
src/drdds/msg/: AiryLidarStatus.msg  AiryLidarValue.msg  BatteryData.msg  BatteryDataValue.msg  CpuData.msg  CpuDataValue.msg  ExecStatusValue.msg  FaultStatus.msg  FaultStatusValue.msg  Gait.msg  GamepadData.msg  InputStatusValue.msg  Joints.msg  JointsCmd.msg  JointsDataCmd.msg  LedStatusLight.msg  LedStatusLightValue.msg  LocationStatus.msg  LocationStatusValue.msg  LossStatusValue.msg  MotionInfo.msg  MotionInfoValue.msg  MotionState.msg  MotionStatus.idl  MotionStatus.msg  MotionStatusValue.msg  NavCmd.msg  NavCmdValue.msg  NavSat.msg  NavSatValue.msg  NodeStatus.msg  NodeStatusValue.msg  PlannerStatus.msg  PlannerStatusValue.msg  StdStatus.msg  Steer.msg  SteerValue.msg  Timestamp.msg
src/drdds/srv/: StdSrvInt32.srv
(+24 files in other folders)
