<?xml version="1.0"?>
<package format="3">
  <name>lite3_rl_deploy</name>
  <version>1.0.0</version>
  <description>RL deploy</description>
  <maintainer email="haokaidai.zju@gmail.com">Haokai Dai</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drdds</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
