<?xml version="1.0"?>
<package format="3">
  <name>rl_deploy</name>
  <version>1.0.0</version>
  <description>RL deploy</description>
  <maintainer email="pengbo@deeprobotics.cn">Bo (Percy) Peng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drdds</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
